--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1shrink-to-fit=no"><title>React Demo</title><link href="/react-demo/main.bundle.b8fb6cf0004ae424b480.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="/react-demo/vendor.bundle.3b34dab0bc0827de7de6.js"></script><script src="/react-demo/main.bundle.749408735d8cfb8182fe.js"></script></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1shrink-to-fit=no"><title>React Demo</title><script>(function(l) {
+            if (l.search) {
+                var q = {};
+                l.search.slice(1).split('&').forEach(function(v) {
+                    var a = v.split('=');
+                    q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+                });
+                if (q.p !== undefined) {
+                    window.history.replaceState(null, null,
+                        l.pathname.slice(0, -1) + (q.p || '') +
+                        (q.q ? ('?' + q.q) : '') +
+                        l.hash
+                    );
+                }
+            }
+        }(window.location))</script><link href="/react-demo/main.bundle.b8fb6cf0004ae424b480.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="/react-demo/vendor.bundle.3b34dab0bc0827de7de6.js"></script><script src="/react-demo/main.bundle.749408735d8cfb8182fe.js"></script></body></html>
